--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "vite-express": "^0.21.1"
   },
   "devDependencies": {
