--- a/htmx/package.json
+++ b/htmx/package.json
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "htmx.org": "^1.9.12",
     "vite": "^6.3.5",
     "vite-express": "^0.21.1"
