es6 + htmx build config

--- a/htmx/package.json
+++ b/htmx/package.json
@@ -4,7 +4,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node app.js -dev",
+    "build": "vite build",
+    "preview": "node app.js"
   },
   "author": "",
   "license": "ISC",
