--- a/es6/package.json
+++ b/es6/package.json
@@ -7,7 +7,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node app.js -dev",
+    "build": "vite build",
+    "preview": "node app.js"
   },
   "dependencies": {
     "express": "^5.1.0",
