--- a/vue/package.json
+++ b/vue/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "vue",
+  "name": "vue-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node app.js",
+    "dev": "node app.js -dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "node app.js"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "vite-express": "^0.21.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "vite-express": "^0.21.1",
     "vite": "^6.3.5"
   }
 }
