--- a/solid/package.json
+++ b/solid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid",
+  "name": "solid-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "solid-js": "^1.9.5",
-    "vite-express": "^0.21.1"
+    "solid-js": "^1.9.5"
   },
   "devDependencies": {
     "vite": "^6.3.5",
+    "vite-express": "^0.21.1",
     "vite-plugin-solid": "^2.11.6"
   }
 }
