--- a/svelte/package.json
+++ b/svelte/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "svelte",
+  "name": "svelte-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node app.js",
+    "dev": "node app.js -dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "node app.js"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "svelte": "^5.28.1",
+    "vite-express": "^0.21.1",
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "vite-express": "^0.21.1"
+    "svelte": "^5.28.1",
+    "express": "^5.1.0"
   }
 }
