--- a/react/package.json
+++ b/react/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "node app.js -dev",
     "build": "vite build",
-    "preview": "node app.js",
-    "lint": "eslint ."
+    "preview": "node app.js"
   },
   "dependencies": {
     "express": "^5.1.0",
@@ -20,9 +19,6 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5",
     "vite-express": "^0.21.1"
